--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 
         // Base map
         L.tileLayer('https://services.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-            attribution: '© googleSatellite contributors'
+            attribution: '© googleSatellite contributors',
+            maxZoom:25
         }).addTo(map);
 
         // Define the user marker
